<resources>
    <string name="app_name">contact management system</string>
    <string name="get_start">Get Start</string>
    <string name="contact_management_system">Contact Management System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_no">Mobile No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
