<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".RegActivity">

    <LinearLayout
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="If you registered user to login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_no"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/mobile_no"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/inputfield"
                android:hint="@string/mobile_no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/inputfield"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/inputfield"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:enabled="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reg_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@drawable/buttonshape"
                android:enabled="true"
                android:text="@string/register"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>